[package]
name = "esp32-nimble-midi"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = { version = "0.44.1", default-features = false }
esp-idf-sys = { version = "0.35.0", default-features = false }
esp32-nimble = "0.7.0"
anyhow = "1.0.86"
